--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -21,6 +21,7 @@
     </button>
 </nav>
 <form method="post" action="register" >
+    {% csrf_token %}
     <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
